[workspace]
members = ["bitcoin", "hashes", "internals", "fuzz", "io", "units", "base58"]
resolver = "2"

[workspace.dependencies]
base58 = { package = "base58ck", path = "base58" }
bitcoin = { path = "bitcoin" }
fuzz = { package = "bitcoin-fuzz", path = "fuzz" }
internals = { package = "bitcoin-internals", path = "internals" }
io = { package = "bitcoin-io", path = "io" }
bitcoin-io = { package = "bitcoin-io", path = "io" }
hashes = { package = "bitcoin_hashes", path = "hashes" }
units = { package = "bitcoin-units", path = "units" }
